# ROS_for_Waveshare_Alphabot2

./: Alphabot2_build.sh  Alphabot2_clean.sh  Alphabot2_fix.sh  Alphabot2_run.sh  Alphabot2_run_clear_map.sh  Alphabot2_run_fiducial_localization.sh  Alphabot2_run_fiducial_rviz.sh  Alphabot2_run_fiducial_slam.sh  Alphabot2_run_test.sh  README.md
catkin_ws/src/waveshare_alphabot2/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/waveshare_alphabot2/cfg/: Camera.cfg
catkin_ws/src/waveshare_alphabot2/launch/: Alphabot2.launch  Alphabot2_fiducial.launch  Alphabot2_fiducial_localization.launch  Alphabot2_fiducial_rviz.launch  Alphabot2_fiducial_slam.launch  Alphabot2_test.launch
catkin_ws/src/waveshare_alphabot2/msg/: IR.msg  Line_Follow.msg  Line_Follow_Stamped.msg  Obstacle_Stamped.msg  Pan_Tilt.msg  Pan_Tilt_Stamped.msg  RGB_LED.msg  RGB_LED_Array.msg  RGB_LED_Array_Stamped.msg
catkin_ws/src/waveshare_alphabot2/nodes/: ir_control  joystick  motion  pan_tilt  rgb_leds  sensors  sound
catkin_ws/src/waveshare_alphabot2/params/: raspicam_node.yaml
catkin_ws/src/waveshare_alphabot2/rviz/: fiducial_slam.rviz
catkin_ws/src/waveshare_alphabot2/scripts/: test.py
catkin_ws/src/waveshare_alphabot2/urdf/: Waveshare_Alphabot2.urdf
lirc/: hardware.conf  lircd.conf  setup.sh
stl/: AA Batter Eliminator v1.stl  Battery+Camera v10.stl  README.md
wsRGB/: setup.sh  wsrgb.service  wsrgb_service.py
